kubernetes/manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: typ-ingress
spec:
  backend:
    serviceName: flask
    servicePort: 8080
